--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 Click==7.0
+dnspython==1.16.0
 Flask==1.1.1
+Flask-PyMongo==2.3.0
 itsdangerous==1.1.0
 jsons==1.1.1
+pymongo==3.10.1
 typish==1.3.1
 Werkzeug==1.0.0
