--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ Flask==1.1.1
 Flask-PyMongo==2.3.0
 itsdangerous==1.1.0
 jsons==1.1.1
+passlib==1.7.2
 pymongo==3.10.1
 typish==1.3.1
 Werkzeug==1.0.0
+WTForms==2.2.1
