--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Click==7.0
 dnspython==1.16.0
 Flask==1.1.1
 Flask-PyMongo==2.3.0
+Flask-WTF==0.14.3
 itsdangerous==1.1.0
 jsons==1.1.1
 passlib==1.7.2
